--- a/src/Modules/Scoreboard.Modules.Main/Scoreboard.Modules.Main.csproj
+++ b/src/Modules/Scoreboard.Modules.Main/Scoreboard.Modules.Main.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.4.1" />
     <PackageReference Include="ReactiveUI.WPF" Version="19.4.1" />
+    <PackageReference Include="System.Management" Version="7.0.2" />
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
